      last displayed frame!
    * Added buttons to open and change scene directory in 3D Render tab
    * Added Post-Processing tab in the Render Controls window
    * Added a combo box for post-processing mode under the Post-Processing
      tab. This replaces the "gamma enabled" check box.
    * Added an exposure slider under the Post-Processing tab. This replaces
      the old gamma slider.

1.1.2 - 2013-01-05

    * Fixed error that could cause Chunky to not remember the last used
      texture pack
    * Improved torch rendering - torches now render exactly like in-game
    * Biome colors are now blurred - improves visibly sharp biome edges
    * Added biome map mode - renders a map color coded by biome ID
    * Lily pads render with the correct rotation (same as in-game)
    * Added button to reload all chunks in the scene
    * Pressure plates now have the correct size
    * Fixed some door rendering issues (incorrect rotation)

1.1.1 - 2012-11-19
    * Don't warn when not able to load the world of the loaded scene
    * Fixed door rendering issues
    * Implemented new blocks from Minecraft 1.4.2:
      + Carrot Block
      + Potato Block
      + Wooden Button
      + Beacon (Placeholder: Glass Block)
      + Command Block
      + Cobblestone Walls

1.1.0 - 2012-09-21
    * The Moved By Piston block is not rendered
    * Unknown block types are not rendered (used to be rendered as
      question mark blocks)
    * Increased the maximum sun intensity for the sun intensity slider
    * Improved vine rendering: draw top vines
    * Improved underwater rendering & various water rendering issues
    * Fixed ice block rendering issue
    * Fixed error causing cobblestone stairs to render with the smooth
      stone texture
    * Fixed crash when viewing chunks with certain blocks in the map view
    * Don't treat water as part of a cave in cave view
    * Added benchmark mode
    * Deleting chunks now correctly updates the map view

1.0.15 - 2012-08-07